REST is changed for post service